--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  shared_preferences: '>=0.5.12+4 <2.0.0'
+  progress_dialog: ^1.0.8
+  toast: ^0.1.5
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
