--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   progress_dialog: ^1.0.8
   toast: ^0.1.5
   http: ^0.12.2
+  cached_network_image: ^2.5.0
+  flutter_cache_manager: ^2.1.1
 
 
   # The following adds the Cupertino Icons font to your application.
