--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   http: ^0.12.2
   cached_network_image: ^2.5.0
   flutter_cache_manager: ^2.1.1
+  flutter_speed_dial: ^1.2.5
+  image_cropper: ^1.3.1
+  image_picker: ^0.6.7+21
 
 
   # The following adds the Cupertino Icons font to your application.
