--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_speed_dial: ^1.2.5
   image_cropper: ^1.3.1
   image_picker: ^0.6.7+21
+  intl: ^0.16.1
 
 
   # The following adds the Cupertino Icons font to your application.
