--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   image_cropper: ^1.3.1
   image_picker: ^0.6.7+21
   intl: ^0.16.1
+  date_format: ^1.0.9
+  pull_to_refresh: ^1.6.4
 
 
   # The following adds the Cupertino Icons font to your application.
