--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   intl: ^0.16.1
   date_format: ^1.0.9
   pull_to_refresh: ^1.6.4
+  geolocator: ^5.1.3
+  geocoder: ^0.2.1
+  google_maps_flutter: ^0.5.25
 
 
   # The following adds the Cupertino Icons font to your application.
